--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
     <header class="masthead bg-primary" id="home">
       <div class="container h-100">
         <div class="row h-80">
-          <div class="header-content mx-auto">
-            <img src="img/mark-ico-big.png" style="padding-top:200px;">
+          <div class="header-content mx-auto" style="text-align:center">
+            <img class="img-responsive" src="img/mark-ico-big.png" style="padding-top:150px">
           </div>
         </div>
         <div class="row h-20">
