--- a/index.html
+++ b/index.html
@@ -247,9 +247,9 @@
           <p>Joint Venture: FJ@NexBank.io </p>
           <p style="margin-bottom:5px">Special Request: Ish@NexBank.io </p>
         </div>
-        <div with="50%" >
+<!--        <div with="50%" >
           <img src="img/join-updates.png" style="margin-top:30px">
-        </div>
+        </div>-->
       </div>
       <hr style="border-width:1px;border-color:#8cfd0f;max-width:100%;margin-top:20px" >
       <p style="text-align:center">2018 © WeCare Tech LLP (incorporated in Singapore)         2018 © NexBank IO Ltd (incorporated in Belize)</p>
