--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       <div class="container h-100">
         <div class="row h-100">
             <div class="col-lg-2 col-md-2 col-xs-2 mx_auto" >
-              <img class="img-responsive" src="img/highlight.png">
+              <img src="img/highlight.png">
             </div>
             <div class="col-lg-10 col-md-10 col-xs-10 mx_auto">
               <div style="text-align:center;margin-top:50px">
