--- a/index.html
+++ b/index.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-
   <head>
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
     <meta name="description" content="">
     <meta name="author" content="">
+    <meta name="copyright" content="">
+    <meta name="keywords" content="neo,nex,nexbank,crypto,crytobank">
+    <meta name="robots" content="index,follow">
+    <meta name="DC.title" content="">
 
-    <title>New Age - Start Bootstrap Theme</title>
+    <title>NexBank - CryptoBank On NEO</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -61,7 +65,7 @@
               <img class="img-responsive" src="img/mark-ico-big.png" style="padding-top:150px">
             </div>
             <h4 class="section-heading" >Store. Spend. Exchange. Lend. Borrow. Get Insured!</h4>
-            <p><font color="var(neon-green)">NexBank</font> is the World’s First privacy-enhance crypto-currency bank on neo blockchain platform.  </p>
+            <p><font color="#95fd0f">NexBank</font> is the World’s First privacy-enhance crypto-currency bank on neo blockchain platform.  </p>
           </div>
         </div>
       </div>
@@ -69,9 +73,10 @@
 
     <section class="highlight bg-art text-center" id="highlight">
       <div class="container">
-        <div class="row my-auto">
+        <div class="row">
           <div style="width:15%;float:left;text-align:center">
-            <img src="img/highlight.png">
+            <img src="img/highlight.png"/>
+            <div class="vl" style="margin:0 auto;height:85%"></div>
           </div>
           <div style="width:80%">
             <div >
@@ -103,48 +108,50 @@
       <div class="container">
         <div class="row">
           <div style="width:15%;float:left">
+            <div class="vl" style="margin:0 auto;height:3%"></div>
             <img src="img/products.png">
+            <div class="vl" style="margin:0 auto;height:100%"></div>
           </div>
           <div style="width:80%;text-align:left" >
             <div class="row">
               <div class="col-lg-6 col-md-6">
                 <p class = "col-lg-6 col-md-6 col-xs-6 products-title "><u>Secured Wallet</u></p>
-                <img src="img/wallet-02.png" />
+                <img src="img/wallet.png" />
                 <p style="color:white;align:left">Anyone can open an account with NexBank with any smartphone. No ID or certified identity required, because Nexbank values your privacy. Store any cryptocurrency with NexBank’s 3-tier security enhanced wallet. Even if it is hacked, your currency is insured</p>
               </div>
               <div class="col-lg-6 col-md-6">
                 <p class = "col-lg-6 col-md-6 col-xs-6 products-title"><u>Exchange</u></p>
-                <img src="img/exchange-02.png" />
+                <img src="img/exchange.png" />
                 <p style="color:white">Enjoy super-low fee, when you exchange from one crypto-currency to another. Why pay more, when smart-contract-technology does most of the work?</p>
               </div>
             </div>
             <div class="row">
               <div class="col-lg-6 col-md-6">
                   <p class = "col-lg-6 col-md-6 col-xs-6 products-title"><u>Debit Card</u></p>
-                  <img src="img/debitcard-02.png" />
+                  <img src="img/debitcard.png" />
                   <p style="color:white;align:left">NexBank automates the conversation of your crypto-currency to FIAT currency whenever you wish to make a purchase at any retail outlet with NFC (near-field-contactless) terminal. </p>
               </div>
               <div class="col-lg-6 col-md-6">
                 <p class = "col-lg-6 col-md-6 col-xs-6 products-title"><u>P2P Payments</u></p>
-                <img src="img/p2p-02.png" />
+                <img src="img/p2p.png" />
                 <p style="color:white">All users can send and receive crypto-currency, within 10 seconds, from anyone with NexBank’s Wallet. It connects merchants, buyers, payors, payees, shoppers (and the list is endless) with borderless trade at super-low transaction fee. </p>
               </div>
             </div>
             <div class="row">
               <div class="col-lg-6 col-md-6">
                   <p class = "col-lg-6 col-md-6 col-xs-6 products-title"><u>P2P Loan</u></p>
-                  <img src="img/terms-02.png" />
+                  <img src="img/terms.png" />
                   <p style="color:white;align:left">Users can lend or borrow from one another, as payment terms are clearly defined and agreed on with 100% transparency. </p>
               </div>
               <div class="col-lg-6 col-md-6">
                 <p class = "col-lg-6 col-md-6 products-title"><u>Insurance</u></p>
-                <img src="img/insurance-02.png" />
+                <img src="img/insurance.png" />
                 <p style="color:white">NexBank provides risk sharing network where users can pool their premiums together to insure against a specific risk. It can be any risk the the users deem important and NexBank provides reinsurance if the pool is insufficient. This hybrid insurance model ensures premium stays low and funds are always sufficient to cover risks. </p>
               </div>
             </div>
             <div class="row">
                 <p class="col-lg-6 col-md-6 products-title"><u>Free Capital Movement </u></p>
-                <img src="img/scale-02.png" />
+                <img src="img/scale.png" />
                 <p style="color:white;align:left">NexBank encourages free trade, one of the reasons why crypto-currency has rising acceptance level over the last 5 years. NexBank allows borderless movement of USD/EURO with its PEG crypto-currency. PEG is digital currency that is 1:1 pegged with US Dollar or EURO Dollar. </p>
             </div>
           </div>
@@ -156,18 +163,20 @@
       <div class="container">
         <div class="row">
           <div style="width:15%;float:left">
+            <div class="vl" style="margin:0 auto;height:3%"></div>
             <img src="img/technology.png" >
+            <div class="vl" style="margin:0 auto;height:90%"></div>
           </div>
           <div style="width:80%;text-align:left">
             <div class="row">
               <div class="col-lg-6 col-md-6">
                   <p class = "col-lg-7 col-md-7 products-title">PRIVACY ENHANCED</p>
-                  <img src="img/privacy-02.png" />
+                  <img src="img/anonymity.png" />
                   <p style="color:white;align:left">As we know in most blockchain systems, all transaction records are available on public domain. NexBank ensures all transactions are anonymous as it deploys ring signature algorithm, the same currently used by Monero Blockchain</p>
               </div>
               <div class="col-lg-6 col-md-6">
                 <p class = "col-lg-7 col-md-7 products-title">CENSORSHIP PROOF </p>
-                <img src="img/AI-02.png" />
+                <img src="img/decensor.png" />
                 <p style="color:white">NexBank has built-in support for OBSF4, obfuscation protocol that hides the nature of the traffic that goes through it. By incorporating OBFS4, it is possible to use NexBank even in countries where government attempts to restrict or block blockchain access, like China or Iran.</p>
               </div>
             </div>
@@ -175,14 +184,14 @@
               <div class="col-lg-6 col-md-6">
                 <div class="row">
                   <p class = "col-lg-7 col-md-7 products-title">ENCRYPTED COMMUNICATION </p>
-                  <img src="img/encrypted-02.png" />
+                  <img src="img/encrypted.png" />
                 </div>
                 <p style="color:white;align:left">NexBank takes the privacy of users very seriously. All chats or conversations are encrypted so no one cannot track or review any code. Symmetric encryption and Asymmetric encryption are utilized to ensure this objective is met. </p>
               </div>
               <div class="col-lg-6 col-md-6">
                 <div class="row">
                   <p class = "col-lg-7 col-md-7 products-title">ANYSMARTPHONE ANYTIME</p>
-                  <img src="img/userfriendly-02.png" />
+                  <img src="img/service.png" />
                 </div>
                 <p style="color:white">Anyone with any smartphone (Android, IOS) can download NexBank app and start using it anytime anywhere 24/7.</p>
               </div>
@@ -191,14 +200,14 @@
               <div class="col-lg-6 col-md-6">
                 <div class="row">
                   <p class = "col-lg-7 col-md-7 products-title">HACK PROOF</p>
-                  <img src="img/hacking-02.png" />
+                  <img src="img/hacking.png" />
                 </div>
                 <p style="color:white;align:left">Blockchain stores information across a number of computers. Because information is scattered over a vast number of locations, this renders the network decentralised and hence makes hacking NexBank near impossible. To further enhance this feature, NexBank’s adopts 4 tiers security; biometric scan, User track Check (UTC) System, Server-Side Validation, Intrusion Defense System (IDS) and Intrusion Prevention System (IPS). </p>
               </div>
               <div class="col-lg-6 col-md-6">
                 <div class="row">
                   <p class = "col-lg-7 col-md-7 products-title">SUPER HIGH SPEED TRANSACTION </p>
-                  <img src="img/machine-02.png" />
+                  <img src="img/machine.png" />
                 </div>
                 <p style="color:white">Neo Protocol can process 1,000 TPS (transaction per second) as compared to Ethereum transaction speed of 15 TPS. By 2020, the protocol speed will be increased to no less than 10,000 TPS which means  </p>
               </div>
@@ -212,7 +221,9 @@
       <div class="container">
         <div class="row">
           <div style="width:15%;float:left">
+            <div class="vl" style="margin:0 auto;height:10%"></div>
             <img src="img/whitepaper.png">
+            <div class="vl" style="margin:0 auto;height:80%"></div>
           </div>
           <div style="width:80%">
             <div class="row">
@@ -220,13 +231,13 @@
                   <p style="color:#95fd0f">Whitepaper that explains all!</p>
                   <p style="color:white;margin-top:20px">download here</p>
                   <img src="img/down-arrow.png"/> </br>
-                  <img src="img/paper.png">
+                  <img src="img/download-whitepaper.png">
               </div>
               <div class="col-lg-6 col-md-6">
                 <p style="color:#95fd0f">1-Page Explainer for the busy ones!</p>
                 <p style="color:white;margin-top:20px">download here</p>
                 <img src="img/down-arrow.png"/> </br>
-                <img src="img/paper.png">
+                <img src="img/download-paper.png">
               </div>
             </div>
           </div>
@@ -238,7 +249,9 @@
       <div class="container">
         <div class="row">
           <div style="width:15%;float:left">
+            <div class="vl" style="margin:0 auto;height:3%"></div>
             <img src="img/contact.png">
+            <div class="vl" style="margin:0 auto;height:80%"></div>
           </div>
           <div style="width:80%">
             <img src="img/mark-ico-big.png" style="padding-top:100px;">
@@ -270,7 +283,7 @@
       </div>
       </div>
       <hr style="border-width:1px;border-color:#95fd0f;max-width:100%;margin-top:0px" >
-      <p style="text-align:center">2018 © WeCare Tech LLP (incorporated in Singapore)         2018 © NexBank IO Ltd (incorporated in Belize)</p>
+      <p style="text-align:center;color:grey;font-size:14px">2018 © WeCare Tech LLP (incorporated in Singapore)         2018 © NexBank IO Ltd (incorporated in Belize)</p>
     </footer>
 
     <!-- Bootstrap core JavaScript -->
